# rtasr

./: .env.template  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  plots.py  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci-cd.yaml
data/: assemblyai_sample.json  deepgram_sample.json  revai_sample.json  speechmatics_sample.json  wordcab_sample.json
docs/: index.md  license.md
license/: index.html
search/: search_index.json
src/rtasr/: __init__.py  __main__.py  cli_messages.py  concurrency.py  constants.py  plots.py  speaker_map.py  utils.py
src/rtasr/asr/: __init__.py  concurrency.py  options.py  providers.py  schemas.py
src/rtasr/cli/: __init__.py  audio_length_command.py  benchmark_command.py  download_command.py  evaluation_command.py  list_command.py  plot_command.py  transcription_command.py
src/rtasr/datasets/: __init__.py  dataset_ami.py  dataset_fleurs.py  dataset_voxconverse.py
src/rtasr/evaluation/: __init__.py  der.py  schemas.py  utils.py  wer.py
tests/: conftest.py  test_cli_messages.py  test_concurrency.py  test_constants.py  test_main.py  test_speaker_map.py  test_utils.py
tests/asr/: test_asr_schemas.py  test_providers.py
tests/datasets/: test_init.py
tests/evaluation/: test_der.py  test_eval_schemas.py  test_schemas.py
